src/assets/styles/main.scss
@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');

$font-stack: 'Roboto', sans-serif;
$light: #eee;
$dark: #333536;
$med: #646769;
$primary: #1f74d4;
$primary-dark: #14539b;

@mixin absoluteCover {
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

html {
    font-size: 16px;
    // min-width: 300px;
    text-rendering: optimizeLegibility;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;  
    -webkit-text-size-adjust: 100%;
    -moz-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    text-size-adjust: 100%;
}

body {
    font-family: $font-stack;
    margin: 0;  
    color: $dark;    
    // -webkit-font-smoothing: antialiased;
    // -moz-osx-font-smoothing: grayscale;
}

.img {
    max-width: 100%;
    height: auto;
    max-height: 350px;    
    -webkit-filter: hue-rotate(10deg);
    filter: hue-rotate(328deg);       
}


p,
li {
    line-height: 135%;
    font-family: Arial, Helvetica, sans-serif;
}

.h1 {
    font-size: 4rem;
}

h1 {
    font-size: 250%;
}

h1,
h2,
h3,
h4 {
    color: $med;    
    margin-top: 0;
}

.strong {
    font-weight: bold;
    color: $med;
    // font-size: 1.4rem;
}

.strong--dark {
    color: #c3cbcf;
    font-weight: bold;
}

.primary {
    color: $primary;
}


// applied to p element/containers for readability
.content {
    max-width: 550px;
}

.header {
    height: 10em;
    display: flex;
    // align-items: center;
    justify-content: flex-end;
    flex-direction: column;
    // background: #f9f9f9;
}

.video {
    max-width: 100%;
    // max-width: 800px;
    height: auto;    
}

// =========
// main
// ------
// overflow-hidden to prevent scroll
// =========

.hr {
    background: $light;
    border: none;
    height: 2px;
    width: 100%;        
}


.main {
    // outline: 2px dashed lightseagreen;
    display: grid;
    grid-template-columns: 10em 1fr;
    // height: 100vh;
}


.container {
    // outline: 2px dashed royalblue;
    // width: 100%;
    max-width: 900px;
    margin: 0 auto;
    padding: 0 2em;
}

.contact {
    input[type=button], 
    input[type=submit] {
        border: none;
        background: $primary;
        color: $light;
        font-size: 1.2rem;
        padding: 0.4em;
        transition: all 200ms ease;
        margin-bottom: 2rem;
        &:hover {
            cursor: pointer;
            background: $primary-dark;
        }
    }
}


.contact__item{    
    display: block;
    margin: 3rem 0;    
    label {
        display: block;
        margin-bottom: 0.5rem;
    }    
    input {                
        border: none;
        border-bottom: 1px solid $med;
    }

    textarea {
        border: none;
        border-left: 1px solid $med;
        padding: 0.5rem;
    }
}


// =======================
//          NAV
// =======================
.nav {  
    //   outline: 2px dashed royalblue;
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    min-width: 8em;
    // background: #ffffff;
    background: $light;
    transition: all 200ms cubic-bezier(0.165, 0.84, 0.44, 1);
    //   height: 100vh;

  ul {
    // outline: 2px dashed green;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1em;
    list-style: none;
  }
  
  li {
    margin: 1em;
    &:hover .link__tip {
        visibility: visible;
    }
  }
  
  a {
    color: $dark;
    // color: $primary;
    text-decoration: none;
    border-bottom: 1px dashed rgba(0,0,0,0);
    transition: all 200ms ease-in;
    font-size: 1.2rem;

    .selected{
        border-bottom: 1px dashed $primary;
    }

    &:hover {
      border-bottom: 1px dashed $primary;
    }

    
  }  
}


.nav__close {
    display: none;
    background: none; 
    border: none;
    position: absolute;
    z-index: 999;
    top: 1rem;
    right: 1rem;    

    h1 {
        margin: 0;
    }

    &:hover {
        cursor: pointer;
    }
}

.center {
    // outline: 3px dashed black;
    height: 95vh;
    display: flex;
    width: 100%;
    flex-direction: column;
    justify-content: center;    

    h1 {        
        margin-bottom: 0.8rem;
    }    

    h3 {
        padding-left: 3px;
    }
}


.lists {
    display: flex;
    flex-wrap: wrap;
    ul {
        margin-right: 2em;
    }
}




// =======================
//          SKILLS
// =======================
.skills--item {
    margin-bottom: 2.8rem;    

    div {
        // outline: 1px solid red;
        // padding: 1em;
        display: flex;
        flex-wrap: wrap;        
    }
    
}

.skill--span {
    color: $primary;
    border: 1px solid $primary;
    margin: 0.35rem;        
    margin-top: 0;
    margin-left: 0;
    padding: 0.5rem;
    border-radius: 5px;
    font-weight: 700;
    transition: all 200ms ease-in;    
}    


// =======================
//          PROJECT
// =======================
.project {    
    margin-bottom: 7rem;    
    border-radius: 5px;        
}

.project--links {
    display: flex;
    flex-wrap: wrap;
    a {
        // color: $light;    
        margin: .5rem 1em;  
        margin-left: 0;            
        padding: 0.5rem;
        border-radius: 5px;        
        background: $primary;
        color: $light;                 
        font-weight: 700;  
        text-decoration: none; 
        transition: all 200ms ease;   
        span {
            margin-right: 5px;            
            line-height: 0%;
            font-size: 1.4rem;
            transition: all 150ms ease;  
        }

        &:hover {
            background: $primary-dark;

            span {
                padding-left: 5px;
                margin-right: 0;                
            }
        }

        &:last-of-type {
            background: $med;

            &:hover {
                background: $dark;
            }
        }
    }
}

.project__features {      
    padding: 1em 0;
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;
    h3 {
        color: $med;
        &:first-of-type {
            color: $primary;
        }        
    }

    div{
        &:last-of-type {    
            h3 {
                color: $med;
            }
            .project__list {
                .skill--span {
                    color: $med;
                    border: 1px solid $med;
                }                    
            }                
        }
    }
}

.project__list {
    margin-bottom: 2rem;
    display: flex;
    flex-wrap: wrap;

    .skill--span {
        font-size: 0.9rem; 
        padding: 0.25rem;          
    }

    // &:last-of-type {    
    //     h3 {
    //         color: $med;
    //     }    
    //     .skill--span {
    //         color: $med;
    //         border: 1px solid $med;
    //     }                    
    // }
}

.project__text {
    // padding: 1em;
    div {
        margin-bottom: 2rem;
    }
}

.project__video {    
    background: rgb(39, 40, 41);
}

@media(min-width: 768px) {
    .link__tip {
        position: absolute;
        // max-width: 20em;
        width: 100%;
        padding: 0.5rem;        
        border-radius: 5px;
        background: $primary;    
        color: $light;    
        transform: translateY(2em);    
        visibility: hidden;
        font-size: 0.9rem;
        line-height: 125%;
    }
}

@media(max-width:768px) {
    .link__tip {
        display: none;
    }
    .project {
        // box-shadow: 0 3px 6px rgba(0,0,0,0.25);
        margin: 3em 0;
        // padding: 1em;
        display: grid;
        grid-gap: 1em;
        grid-template-areas: "info"
                            "video"
                            "features"
                            "tech";        
    }

    .project__text {
        // padding: 0;
        grid-template-columns: 100%;
    }

    .project__features {
        flex-direction: column;
    }

    .links {
        align-items: flex-start;
    }
}

@media(max-width:505px) {
    .h1 {
        font-size: 12vw;
    }
}

@media(max-width:768px) {
    .main {
        grid-template-columns: 100%;
    }   

    .nav {
        transform: translateX(-100%);
        width: 100%;        

        li {
            text-align: center;
        }
        
    }

    .nav__show {
        transform: translateY(0);
    }

    .nav__close {
        display: block;
    }
  }

